--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,9 @@
     padding: 10px;
     border: 1px solid #333;
   }
+  .member.recovering {
+    background-color: orange;
+  }
   .heartbeat.old {
     color: red;
   }
