--- a/templates/status.html
+++ b/templates/status.html
@@ -1,10 +1,12 @@
-<h2>Quorum Status</h2>
 
-Current quorum_id: {{quorum_id}} <br>
-Next quorum status: {{quorum_status}}
+{% for room in rooms %}
+<h2>Room Status: {{room.room_id}}</h2>
+
+Current quorum_id: {{room.quorum_id}} <br>
+Next quorum status: {{room.quorum_status}}
 
 <h3>Previous Quorum</h3>
-{% if let Some(prev_quorum) = prev_quorum %}
+{% if let Some(prev_quorum) = room.prev_quorum %}
 
 Previous quorum id: {{prev_quorum.quorum_id}} <br>
 Quorum age:
@@ -14,7 +16,7 @@ Quorum age:
 {% for member in prev_quorum.participants %}
 
 <div class="member
- {% if member.step != max_step %}recovering{% endif %}
+ {% if member.step != room.max_step %}recovering{% endif %}
 ">
   <b>{{ member.replica_id }}</b> <br/>
   Step: {{ member.step }} <br/>
@@ -33,7 +35,9 @@ Quorum age:
 
 {% endif %}
 
-<h3>Heartbeats</h3>
+{% endfor %}
+
+<h2>Heartbeats</h2>
 
 <ul>
 {% for replica_id in heartbeats.keys() %}
@@ -47,5 +51,3 @@ Quorum age:
 
 {% endfor %}
 </ul>
-
-
